--- a/scss/components/cards/header-card-overlay.scss
+++ b/scss/components/cards/header-card-overlay.scss
@@ -62,7 +62,6 @@
             }
         }
         .card-subtitle {
-            padding: 2rem 2rem 0;
             font-family:    $font-family-serif;
             font-weight:    normal;
             text-transform: none;
@@ -73,6 +72,7 @@
             margin-bottom: .75rem;
 
             @include media-breakpoint-up(md) {
+                padding: 2rem 2rem 0;
                 font-size: 2.2rem;
             }
         }
@@ -80,7 +80,9 @@
             font-size: .9rem;
             font-family: $font-family-sans-serif;
             color:       #FFFFFF;
-            padding: 0 2rem 2rem;
+            @include media-breakpoint-up(md) {
+                padding: 0 2rem 2rem;
+            }
         }
 
         @include media-breakpoint-up(xxl){
